# match-analysis

./: .dvcignore  .gitignore  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  setup.py  template.py
.github/workflows/: main.yaml
config/: config.yaml
mlruns/0/: meta.yaml
mlruns/0/b1bc2696255d478bb4f2376877c08692/: meta.yaml
mlruns/0/b1bc2696255d478bb4f2376877c08692/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/0/b1bc2696255d478bb4f2376877c08692/metrics/: accuracy
mlruns/0/b1bc2696255d478bb4f2376877c08692/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
model/: model.pkl  scaler.pkl
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_prepare_data.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/MatchAnalysis/components/: data_ingestion.py  model_evaluation.py  model_training.py  prepare_base_model.py  prepare_data.py
src/MatchAnalysis/config/: configuration.py
src/MatchAnalysis/entity/: config_entity.py
src/MatchAnalysis/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_prepare_data.py  stage_04_model_training.py  stage_05_model_evaluation.py
src/MatchAnalysis/utils/: common.py
