[tool.poetry]
name = "match-analysis"
version = "0.1.0"
description = ""
authors = ["Guido Mainardi <guidoluis.gm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
pandas = "2.1.4"
scikit-learn = "^1.4.0"
notebook = "^7.0.6"
numpy = "1.22.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
python-box = "6.0.2"
PyYAML = "^6.0.1"
tqdm = "^4.66.1"
ensure = "1.0.2"
joblib = "^1.3.2"
types-PyYAML = "^6.0.12.12"
SciPy = "^1.11.4"
fastapi = "^0.109.0"
gdown = "^4.7.3"
uvicorn = "^0.27.0.post1"

[tool.poetry.group.dev.dependencies]
dvc = "^3.39.0"
mlflow = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
